syntax = "proto3";
package game;

import "model.proto";


//登录游戏服务器
message get_user_info {

}

//登录游戏服务器返回
message get_user_info_ret {
    User user = 1;              //用户游戏信息
}


//角色登录
message login_role {
    int64 roleID = 1; //角色id
}

message login_role_ret {
    RoleInfo roleInfo = 1; //角色详细数据
    int64 serverTime = 2;  //服务器时间
}


//创建角色
message create_role {
    Role role = 1;
}

message create_role_ret {
    Role role = 1;
}

//删除角色
message remove_role {
    int64 roleID = 1;
}

message remove_role_ret {

}